Remove ewb-plug and updated readme

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1818,6 +1818,72 @@
     "for el in common_texts:\n",
     "    print(el)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "8aa79588-d264-427d-9fb0-23557d14f562",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "column_name = \"lemmas\"\n",
+    "class IterableSentence_fromfile(object):\n",
+    "    def __init__(self, filename):\n",
+    "        self.__filename = filename\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        df = pd.read_parquet(self.__filename)[0:100]\n",
+    "        if column_name not in df.columns:\n",
+    "            raise ValueError(\n",
+    "                f\"The column {column_name} does not exist in the file {self.__filename}.\")\n",
+    "            return\n",
+    "        for index, row in df.iterrows():\n",
+    "            yield row[column_name].split()    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "c8f4c47e-6466-4a71-9652-127ad0e8cbc7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "path_df = pathlib.Path(\"/export/usuarios_ml4ds/lbartolome/Repos/my_repos/W2V_CTM/data/processed/s2cs_processed.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "10468304-3937-4fa0-8c97-1715ff2e53f5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "sentences = IterableSentence_fromfile(path_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "cca23f24-1acd-404c-b07a-9eca403075cf",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "model_w2v = Word2Vec(\n",
+    "    sentences,\n",
+    "    vector_size=200,  # Dimensionality of the word vectors\n",
+    "    window=5,  # Context window size\n",
+    "    min_count=10,  # Ignores all words with total frequency lower than this\n",
+    "    sg=1,  # Training algorithm: 1 for skip-gram; otherwise CBOW\n",
+    "    seed=42)"
+   ]
   }
  ],
  "metadata": {
